# voice_app

./: .gitignore  Cargo.toml
frontend/: index.html  script.js  style.css
src/: main.rs
