[package]
name = "voice_app"
version = "0.1.0"
edition = "2021"

[dependencies]
portaudio = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.4.0"
warp = "0.3.7"
dotenvy = "0.15"
shuttle-runtime = "0.47.0"