[package]
name = "talk2me"
version = "0.1.0"
edition = "2021"

[dependencies]
portaudio = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.4.0"
warp = { version = "0.3" }
dotenvy = "0.15"
shuttle-runtime = "0.47.0"
futures = "0.3"